--- a/package.json
+++ b/package.json
@@ -29,18 +29,18 @@
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
     "firebase": "^9.15.0",
+    "hls.js": "^1.5.19",
     "js-sha256": "^0.11.0",
     "localforage": "^1.10.0",
-    "ng-dynamic-component": "^8.0.1",
+    "ng-dynamic-component": "^10.8.2",
     "ng-zorro-antd": "^15.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
-    "zone.js": "~0.12.0",
-    "hls.js": "^1.5.19"
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.8",
+    "@angular-devkit/build-angular": "^15.2.11",
     "@angular/cli": "~15.2.8",
     "@angular/compiler-cli": "^15.2.0",
     "@types/cleave.js": "^1.4.7",
